# coreforecast

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  THIRD_PARTY_LICENSES.md  dev_environment.yml  differences.mdx  docs.json  environment.yml  expanding.mdx  exponentially_weighted.mdx  grouped_array.mdx  grouped_array.pxd  grouped_array.pyx  index.mdx  lag_transforms.mdx  mint.json  pyproject.toml  requirements-test.txt  requirements-text.txt  rolling.mdx  scalers.mdx  seasonal.mdx  utils.mdx
.github/: release-drafter.yml
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: build-docs.yaml  build-python-package.yml  ci.yaml  lint.yaml  pytest.yml  python-publish.yml  release-drafter.yml  release.yaml  test-python-publish.yml  test-release.yaml  wheels.yml
coreforecast/: differences.py  grouped_array.py  lag_transforms.py  rolling.py  scalers.py  seasonal.py  utils.py
docs/: convert_to_mkdocstrings.py  differences.md  expanding.md  exponentially_weighted.md  grouped_array.md  lag_transforms.md  process.py  rolling.md  scalers.md  seasonal.md  to_mdx.py
docs/mintlify/: docs.json  index.mdx  mint.json
include/: brent.h  c_api.h  common.h  coreforecast.h  diff.h  expanding.h  exponentially_weighted.h  grouped_array.h  grouped_array_exports.h  grouped_array_functions.h  kpss.h  lag.h  nb.h  rolling.h  scalers.h  seasonal.h  seasonal_rolling.h  stats.h  types.h
include/coreforecast/: brent.h  common.h  diff.h  expanding.h  exponentially_weighted.h  grouped_array.h  grouped_array_functions.h  kpss.h  rolling.h  scalers.h  seasonal.h  stats.h
python/coreforecast/: __init__.py  _lib.py  differences.py  expanding.py  exponentially_weighted.py  grouped_array.py  lag_transforms.py  rolling.py  scalers.py  seasonal.py  utils.py
scripts/: disable_omp_arm64.py  float64_methods.py  switch_xcode
src/: c_api.cpp  coreforecast.cpp  diff.cpp  expanding.cpp  exponentially_weighted.cpp  grouped_array.cpp  grouped_array_functions.cpp  lag.cpp  rolling.cpp  scalers.cpp  seasonal.cpp  seasonal_rolling.cpp
tests/: __init__.py  conftest.py  test_efficiency.py  test_expanding.py  test_exponentially_weighted.py  test_ga_fns.py  test_lag_transforms.py  test_rolling.py  test_scalers.py  test_skipna.py
tmp/: box-cox.R  box-cox.ipynb
