[project]
name = "coreforecast"
version = "0.0.16"
requires-python = ">=3.9"
dependencies = ["numpy>=1.20.0"]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
description = "Fast implementations of common forecasting routines"
authors = [{ name = "Jose Morales", email = "jmoralz92@gmail.com" }]
readme = "README.md"
keywords = ["forecasting", "time-series"]

[project.optional-dependencies]
dev = ["pandas", "pre-commit", "pytest"]

[project.urls]
homepage = "https://nixtla.github.io/coreforecast"
documentation = "https://nixtla.github.io/coreforecast"
repository = "https://github.com/Nixtla/coreforecast"

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = "build"
cmake.verbose = true
logging.level = "INFO"
sdist.exclude = ["docs", "tests", "*.yml"]
sdist.reproducible = true
wheel.exclude = ["Release"]
wheel.expand-macos-universal-tags = true
wheel.install-dir = "coreforecast"
wheel.packages = ["python/coreforecast"]

[tool.cibuildwheel]
archs = "all"
build-verbosity = 3
test-extras = "dev"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = [
    "F", # pyflakes
    "I", # isort
]
